# envy

./: .gitignore  CHANGELOG.md  README.md  abuild  abuild.pub  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: greetings.yaml  release.yaml
src/envy/: envy.py
src/envy/services/: AzureService.py  DopplerService.py  GoogleService.py  aws.py
