[metadata]
name = ENVy-Aechrok
version = 1.0.1
author = Lee Martin
author_email = lee@leemartin.us
description = Simple cli tool to run arbitrary code using environmental variables retrieved as a json object from Azure keyvault.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aechrok/envy
project_urls =
    Bug Tracker = https://github.com/Aechrok/envy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src